Fix items alignment

--- a/src/containers/style.scss
+++ b/src/containers/style.scss
@@ -4,5 +4,5 @@ main {
 }
 
 #routes-container {
-  max-width: 1025px;
+  max-width: 1400px;
 }
